:chart_with_upwards_trend: Keywords updated

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/surajsnanavare/ifsc_finder.git"
   },
   "keywords": [
-    "ifsc"
+    "ifsc", "ifsc finder", "razorpay", "bank details"
   ],
   "author": "Suraj Nanavare",
   "license": "ISC",
